--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,9 @@
     <string name="app_name">WhatToDo</string>
     <string name="signin">Sign In</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_navigation">Navigation</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
     <!--<string name="default_web_client_ids"> 637473864215-6qu5onukflcpv6fk0lj1dao2jsed169u.apps.googleusercontent.com </string>-->
 </resources>
