--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,5 +110,5 @@ It is very easy to use and will definitely help you in making your lifestyle eas
 
     <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
     <string name="play_again">Play Again</string>
-
+<string name="query">If you like our work and want us to work for you then contact us via email.  </string>
 </resources>
