--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,17 +96,16 @@ It is very easy to use and will definitely help you in making your lifestyle eas
     <string name="skip">SKIP</string>
     <string name="start">GOT IT</string>
     <string name="next">NEXT</string>
-    <string name="slide_1_title">Hello Food!</string>
-    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
+    <string name="slide_1_title">Stay Tension Free</string>
+    <string name="slide_1_desc">Now Keep your all day to day tasks at one place.</string>
 
-    <string name="slide_2_title">Movie Tickets</string>
-    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
+    <string name="slide_2_title">Set reminders</string>
+    <string name="slide_2_desc">You can set reminder for each task.</string>
 
-    <string name="slide_3_title">Great Discounts</string>
-    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
+    <string name="slide_3_title">Set image for your task.</string>
+    <string name="slide_3_desc">Now you can give each list and their tasks an image to remember them.  </string>
 
-    <string name="slide_4_title">World Travel</string>
-    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
+    <string name="slide_4_title">Let\'s Go!</string>
 
     <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
     <string name="play_again">Play Again</string>
